test/corpus/example.txt
========================================
comment: start of line
========================================
# Foo

---
(file
  (comment
    (body)))

=======
Bind
=======
bind pager,index \ch<BackSpace> sidebar-toggle-visible

---
(file
  (bind_directive
    (command)
    (map)
    (map)
    (key
      (escape)
      (key_name))
    (function)))

=======
sidebar_unpin
=======
sidebar_unpin *

---
(file
  (sidebar_unpin_directive
    (command)))

=======
Source
=======
source ~/.config/neomutt/neomuttrc

---
(file
  (source_directive
    (command)
    (path
      (string))))

=======
Macro
=======
macro index D '<save-message>+Trash<enter>' 'move message to the trash'

---
(file
  (macro_directive
    (command)
    (map)
    (key)
    (sequence
      (string))
    (description
      (string))))

=======
mailboxes
=======
mailboxes $spool_file $postponed $record $trash

---
(file
  (mailboxes_directive
    (command)
    (mailbox
      (string))
    (mailbox
      (string))
    (mailbox
      (string))
    (mailbox
      (string))))

=======
Shell
=======
set imap_pass = `pass ls password/$USER`

---
(file
  (set_directive
    (command)
    (option)
    (shell)))

=======
Double Quote
=======
set signature = "echo Best Regards$'\n'$DEBFULLNAME|"

---
(file
  (set_directive
    (command)
    (option)
    (string)))

=======
Single Quote
=======
set query_command = 'mutt_ldap_query.pl %s'

---
(file
  (set_directive
    (command)
    (option)
    (string)))

=======
Assign
=======
set allow_ansi=yes
set sleep_time = 0
set ispell = aspell

---
(file
  (set_directive
    (command)
    (option)
    (quadoption))
  (set_directive
    (command)
    (option)
    (int))
  (set_directive
    (command)
    (option)
    (string)))

=======
Complex Assign
=======
set & allow_ansi ? allow_ansi noallow_ansi

---
(file
  (set_directive
    (command)
    (option)
    (option)
    (option)))
